learned flex box

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <div class="outline-offset">
         The outline-offset property is used to create space between the border and the outline. 
     </div>
+
+    <div class="flex-container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>  
+      </div>
 </body>
 </html>
